--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,14 +1,16 @@
--#---
--#title: Welcome to Middleman
--#---
+---
+title: 山妖卫士
+---
+
+-#%p.test xxx
 
 .container.download-part
   %h1.title 山妖卫士
-  %p.desc 全球第一款基于深度学习图像识别的个人反黄软件，为青少年上网保驾护航！
+  %p.desc 全球第一款基于深度学习图像识别的个人电脑反黄软件，为青少年上网保驾护航！
   %a.btn.btn-info.btn-lg.download-link{:href => "http://download.shanyaows.com/trollwiz-0.9.3.9-online.exe"} 免费下载 WINDOWS 7/8/10
 
 .container.function-part
-  %hr
+  %br
   .col-md-4
     %img{:src => "../images/function-protection.png"}
     %h1 主动防护
