--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,14 +7,14 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title || "山妖卫士" %></title>
 
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-  <body class="<%= page_classes %>">
+  <body>
     <%= partial "layouts/header" %>
     <%= yield %>
     <%= partial "layouts/footer" %>
