--- a/source/faq.html.haml
+++ b/source/faq.html.haml
@@ -83,7 +83,7 @@ title: 山妖卫士
       .faq-question
         为什么装了山妖卫士，我的电脑不能上网了？
       .faq-answer
-        如何您开启了山妖卫士的主动防护中的不良网站检测防护或者网页不良图片过滤功能，山妖卫士即以本地代理服务器（科普参考链接http://baike.baidu.com/link?url=b5J7r437onROeW7cpEBIcOAuYZ-zLMf4piNJfvvk6qGza9zTDv4t8nHDv7a8xwpoOxi6SvNdVTUkG9CsZTgRtRJzY_NxWmtxDp7fA1K8jmRA1G2tTWrmVY0QAUMOosUN）的方式代理您的电脑上网，以起到网站内容过滤的主动防护功能。如果山妖卫士没有正常退出（例如机器死机等异常情况），可能会导致浏览器代理设置没有被复原，因此不能正常上网，这时只需手动把浏览器局域网设置恢复即可，参见下图（以IE为例）。另外，山妖卫士不能与其他的以VPN方式工作的软件同时启动。
+        如何您开启了山妖卫士的主动防护中的不良网站检测防护或者网页不良图片过滤功能，山妖卫士即以本地代理服务器（<a href=http://baike.baidu.com/link?url=b5J7r437onROeW7cpEBIcOAuYZ-zLMf4piNJfvvk6qGza9zTDv4t8nHDv7a8xwpoOxi6SvNdVTUkG9CsZTgRtRJzY_NxWmtxDp7fA1K8jmRA1G2tTWrmVY0QAUMOosUN>科普参考链接</a>）的方式代理您的电脑上网，以起到网站内容过滤的主动防护功能。如果山妖卫士没有正常退出（例如机器死机等异常情况），可能会导致浏览器代理设置没有被复原，因此不能正常上网，这时只需手动把浏览器局域网设置恢复即可，参见下图（以IE为例）。另外，山妖卫士不能与其他的以VPN方式工作的软件同时启动。
     %hr
 
     %li.qaitem
