--- a/source/layouts/_header.html.haml
+++ b/source/layouts/_header.html.haml
@@ -1,6 +1,8 @@
 %header.navbar
   .container
-    %p.logo 山妖卫士
+    %p.logo 
+      %img{:src => "../images/main-icon.png", :width => "40px"}
+      山妖卫士
     %nav
       %ul.nav.navbar-nav.navbar-right
         %li
