adjust for suresecure new website

--- a/source/layouts/_footer.html.haml
+++ b/source/layouts/_footer.html.haml
@@ -5,7 +5,11 @@
       -#%img{:src => "../images/weixin-icon.png"}
     %p.small
       %img{:src => "../images/email-icon.png"}
-      =mail_to "support@shanyaows.com"
-    %p.small Copyright © 2014-2015 MasaTek All Rights Reserved
-    %p.small 马沙科技版权所有
+      =mail_to "info@suresecure.com"
+    %p.small 
+      %img{:src => "../images/mobile-icon.png"}
+      0731-89675456
+    %p.small 湖南省长沙市岳麓区梅溪湖创新中心2901
+    %p.small Copyright © 2016-2017 SureSecure All Rights Reserved
+    %p.small 戍融智能版权所有
     %p.small 湘ICP备15013189号
