--- a/source/layouts/_header.html.haml
+++ b/source/layouts/_header.html.haml
@@ -2,10 +2,12 @@
   .container
     %p.logo 
       %img{:src => "../images/main-icon.png", :width => "40px"}
-      山妖卫士
+      戍融智能
     %nav
       %ul.nav.navbar-nav.navbar-right
         %li
           %a{:href => "/"} 首页
         %li
-          %a{:href => "/faq.html"} 帮助
+          %a{:href => "/support.html"} 支持
+        -#%li
+          -#%a{:href => "/faq.html"} 帮助
