--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -85,6 +85,9 @@ footer{
 
 .function-part{
   text-align: center;
+  h1{
+    font-size: 18px;
+  }
 }
 .why-part{
   text-align: center;
@@ -93,7 +96,7 @@ footer{
     color: #b9b9b9;
   }
   ul{
-    text-align: left;
+    text-align: center;
   }
 }
 
