--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,51 +1,80 @@
 ---
-title: 山妖卫士
+title: 戍融智能
 ---
 
 = javascript_include_tag 'http://res.wx.qq.com/open/js/jweixin-1.0.0.js'
 :javascript
-  var $share_url = 'http://www.shanyaows.com'
+  var $share_url = 'http://www.suresecure.com.cn'
 
 .container.download-part
-  %h1.title 山妖卫士
-  %p.desc 全球第一款基于深度学习图像识别的个人电脑反黄软件，为青少年上网保驾护航！
-  %a.btn.btn-info.btn-lg.download-link{:href => "http://download.shanyaows.com/trollwiz-0.9.3.9-online.exe"} 免费下载 WINDOWS 7/8/10
+  %h1.title 戍融智能
+  %p.desc 专注安防人工智能
+  -#%a.btn.btn-info.btn-lg.download-link{:href => "http://download.shanyaows.com/trollwiz-0.9.3.9-online.exe"} 免费下载 WINDOWS 7/8/10
 
 .container.function-part
   %br
-  .col-md-4
+  .col-md-6
     %img{:src => "../images/function-protection.png"}
-    %h1 主动防护
+    %h1 嵌入式3D行为分析设备
     %p 不良网站自动检测、本地不良图片视频检测、网页不良图片过滤
-  .col-md-4
+  .col-md-6
     %img{:src => "../images/function-scan.png"}
-    %h1 本地扫描
+    %h1 嵌入式数字接入ATM防护分析设备
     %p 全盘扫描、上网记录扫描、自定义扫描
-  .col-md-4
+  .col-md-6
     %img{:src => "../images/function-weixin.png"}
-    %h1 微信授权与通知
+    %h1 模拟接入ATM防护分析设备
     %p 高权限操作需微信授权、不良行为微信通知
-
-.container.why-part
+  .col-md-6
+    %img{:src => "../images/function-weixin.png"}
+    %h1 深度学习分析服务器（金融版）
+    %p 高权限操作需微信授权、不良行为微信通知
   %hr
-  -#%h1 您知道吗？
-  .col-md-6
-    %img{:src => "../images/why-01.png"}
-    %h2 为什么要使用反黄软件？
-    %ul
-      %li 由于互联网的普及，大多数孩子第一次暴露在色情之下的年龄低于11岁
-      %li 57%的孩子偶尔会访问网上色情内容
-      %li 超过1/3的13岁以上的孩子在接触色情信息后会主动二次搜索
-      %li 1张不良图片是孩子沉迷于色情文化的开始
-      %li 75%的孩子不会告诉家长关于这些
-      %li 家长普遍不了解孩子上网或使用电脑的具体情况
-      %li 色情是一个巨大的产业，色情图片和网站是互联网不良信息的主要传播形式之一
-      %li 进入中学，网络色情超过游戏，成为影响青少年身心发育的第一要素
-  .col-md-6
-    %img{:src => "../images/why-02.png"}
-    %h2 为什么要选择山妖卫士？
-    %ul
-      %li 山妖卫士给家长提供一个了解孩子使用电脑情况的渠道，通过合理监护、及时发现，大幅减少孩子不当使用互联网可能造成心理不健康的比率
-      %li 山妖卫士反黄引擎通过对图片内容的理解来过滤、扫描图片或视频、屏蔽色情网站，我们的反黄引擎对色情网站的判断率达到100%，扫描发现色情图片或视频的准确度达到99.9%以上，可以做到更加精准的主动和事后防护，保护您的孩子
-      %li 有了山妖卫士的守护，孩子们使用电脑，妈妈们更放心！
+
+-#.container.why-part
+  -#%hr
+  -#%img{:src => "../images/why-01.png"}
+  -#%h1 About US
+  -#%p women
+
+-#.container.why-part
+  -#%hr
+  -#%img{:src => "../images/why-01.png"}
+  -#%h1 Contact US
+  -#%p women
+
+-#.container.why-part
+  -#%hr
+  -#%img{:src => "../images/why-01.png"}
+  -#%h1 We are hiring
+  -#%ul
+    -#%li 计算机视觉工程师
+    -#%li 深度学习工程师
+    -#%li 流媒体C++程序员
+
+
+-#.container.why-part
+  -#%hr
+  -#-#%img{:src => "../images/why-01.png"}
+  -#-#%h2 我们欢迎您的阿如
+  -#-#%h1 您知道吗？
+  -#.col-md-6
+    -#%img{:src => "../images/why-01.png"}
+    -#%h2 为什么要使用反黄软件？
+    -#%ul
+      -#%li 由于互联网的普及，大多数孩子第一次暴露在色情之下的年龄低于11岁
+      -#%li 57%的孩子偶尔会访问网上色情内容
+      -#%li 超过1/3的13岁以上的孩子在接触色情信息后会主动二次搜索
+      -#%li 1张不良图片是孩子沉迷于色情文化的开始
+      -#%li 75%的孩子不会告诉家长关于这些
+      -#%li 家长普遍不了解孩子上网或使用电脑的具体情况
+      -#%li 色情是一个巨大的产业，色情图片和网站是互联网不良信息的主要传播形式之一
+      -#%li 进入中学，网络色情超过游戏，成为影响青少年身心发育的第一要素
+  -#.col-md-6
+    -#%img{:src => "../images/why-02.png"}
+    -#%h2 为什么要选择山妖卫士？
+    -#%ul
+      -#%li 山妖卫士给家长提供一个了解孩子使用电脑情况的渠道，通过合理监护、及时发现，大幅减少孩子不当使用互联网可能造成心理不健康的比率
+      -#%li 山妖卫士反黄引擎通过对图片内容的理解来过滤、扫描图片或视频、屏蔽色情网站，我们的反黄引擎对色情网站的判断率达到100%，扫描发现色情图片或视频的准确度达到99.9%以上，可以做到更加精准的主动和事后防护，保护您的孩子
+      -#%li 有了山妖卫士的守护，孩子们使用电脑，妈妈们更放心！
 
