--- a/source/support.html.haml
+++ b/source/support.html.haml
@@ -9,7 +9,35 @@ title: 戍融智能
   %ul
     %li.qaitem
       .faq-question
-        为什么安装山妖卫士需要绑定微信？
+        管理程序安装与使用说明书
+      .faq-answer
+        %a{:href=>"http://www.baidu.com"} 安装程序下载
+        %br
+        %a{:href=>"http://www.baidu.com"} SQLServer安装说明书
+        %br
+        %a{:href=>"http://www.baidu.com"} 管理程序使用说明书
+    %hr
+    %li.qaitem
+      .faq-question
+        行为分析智能设备使用说明书
+      .faq-answer
+        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+    %hr
+    %li.qaitem
+      .faq-question
+        ATM防护智能分析设备使用说明书
+      .faq-answer
+        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+    %hr
+    %li.qaitem
+      .faq-question
+        前端智能监控设备与管理服务器程序开发接口
+      .faq-answer
+        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+    %hr
+    %li.qaitem
+      .faq-question
+        深度学习服务器开发接口
       .faq-answer
         微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
     %hr
