--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -16,19 +16,19 @@ title: 戍融智能
   .col-md-6
     %img{:src => "../images/function-protection.png"}
     %h1 嵌入式3D行为分析设备
-    %p 不良网站自动检测、本地不良图片视频检测、网页不良图片过滤
+    %p 基于3D场景分析，支持防护舱、ATM自助厅、ATM加钞间多层次防护
   .col-md-6
     %img{:src => "../images/function-scan.png"}
     %h1 嵌入式数字接入ATM防护分析设备
-    %p 全盘扫描、上网记录扫描、自定义扫描
+    %p 支持数字信号接入，实现ATM防护功能
   .col-md-6
     %img{:src => "../images/function-weixin.png"}
     %h1 模拟接入ATM防护分析设备
-    %p 高权限操作需微信授权、不良行为微信通知
+    %p 支持模拟信号接入，实现ATM防护功能
   .col-md-6
     %img{:src => "../images/function-weixin.png"}
     %h1 深度学习分析服务器（金融版）
-    %p 高权限操作需微信授权、不良行为微信通知
+    %p 可以支持异常人脸、电信反诈骗检测功能
   %hr
 
 -#.container.why-part
