--- a/source/layouts/_footer.html.haml
+++ b/source/layouts/_footer.html.haml
@@ -3,9 +3,9 @@
     %hr
     -#%p.small
       -#%img{:src => "../images/weixin-icon.png"}
-    %p.small
-      %img{:src => "../images/email-icon.png"}
-      =mail_to "info@suresecure.com"
+    -#%p.small
+      -#%img{:src => "../images/email-icon.png"}
+      -#=mail_to "info@suresecure.com"
     %p.small 
       %img{:src => "../images/mobile-icon.png"}
       0731-89675456
