--- a/source/layouts/_header.html.haml
+++ b/source/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 %header.navbar
   .container
     %p.logo 
-      %img{:src => "../images/main-icon.png", :width => "40px"}
+      -#%img{:src => "../images/main-icon.png", :width => "40px"}
       戍融智能
     %nav
       %ul.nav.navbar-nav.navbar-right
