--- a/source/support.html.haml
+++ b/source/support.html.haml
@@ -11,34 +11,60 @@ title: 戍融智能
       .faq-question
         管理程序安装与使用说明书
       .faq-answer
-        %a{:href=>"http://www.baidu.com"} 安装程序下载
+        安装程序
+        %a{:href=>"#"} 下载
         %br
-        %a{:href=>"http://www.baidu.com"} SQLServer安装说明书
+        安装说明书
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-ivs-management-system-installation-guide/suresecure-ivs-management-system-installation-guide.md.html"} HTML
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-ivs-management-system-installation-guide/suresecure-ivs-management-system-installation-guide.md.pdf"} PDF
         %br
-        %a{:href=>"http://www.baidu.com"} 管理程序使用说明书
+        使用说明书
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-ivs-management-system-user-guide/suresecure-ivs-management-system-user-guide.md.html"} HTML
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-ivs-management-system-user-guide/suresecure-ivs-management-system-user-guide.md.pdf"} PDF
     %hr
     %li.qaitem
       .faq-question
-        行为分析智能设备使用说明书
+        嵌入式3D行为分析智能设备使用说明书
       .faq-answer
-        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-embedded-3d-analysis-device-user-guide/suresecure-embedded-3d-analysis-device-user-guide.md.html"} HTML
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-embedded-3d-analysis-device-user-guide/suresecure-embedded-3d-analysis-device-user-guide.md.pdf"} PDF
     %hr
     %li.qaitem
       .faq-question
         ATM防护智能分析设备使用说明书
       .faq-answer
-        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-atm-protection-device-user-guide/suresecure-atm-protection-device-user-guide.md.html"} HTML
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-atm-protection-device-user-guide/suresecure-atm-protection-device-user-guide.md.pdf"} PDF
     %hr
     %li.qaitem
       .faq-question
-        前端智能监控设备与管理服务器程序开发接口
+        智能监控设备与管理服务器程序开发接口
       .faq-answer
-        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+        说明文档
+        %a{:href=>"http://docs.suresecure.com.cn/pub/srzn_ivs_sdk/srzn_ivs_sdk.md.html"} HTML
+        %a{:href=>"http://docs.suresecure.com.cn/pub/srzn_ivs_sdk/srzn_ivs_sdk.md.pdf"} PDF
+        %br
+        该说明文档对应示例源码
+        %a{:href=>"https://github.com/suresecure/suresecure-ivs-sdk-demo"} GitHub
+        %br
+        另外我们提供一个较为完整的模拟报警发送与接收的示例程序及相应的源码
+        %a{:href=>"http://downloads.suresecure.com.cn/suresecure-event-demo.zip"} ZIP
+        %a{:href=>"https://github.com/suresecure/suresecure-ivs-event-demo"} GitHub
+        %br
+        编译该示例程序需要下载如下库文件，并在项目内引用
+        %a{:href=>"http://downloads.suresecure.com.cn/DevComponents.DotNetBar2.dll"} DLL
+
     %hr
     %li.qaitem
       .faq-question
         深度学习服务器开发接口
       .faq-answer
-        微信是山妖卫士发现您的电脑不良上网行为及时通知的唯一通讯途径，也是在您需要退出山妖卫士保护或者进行设置、扫描等高级操作时的授权途径（关于授权参见问题6），我们不会发骚扰消息，请放心。
+        接口说明文档
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-deep-server-api/suresecure-deep-server-api.md.html"} HTML
+        %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-deep-server-api/suresecure-deep-server-api.md.pdf"} PDF
+        %br
+        示例程序访问客户端
+        %a{:href=>"http://downloads.suresecure.com.cn/sureseucre-deep-server-client-demo.zip"} ZIP
+        %a{:href=>"https://github.com/suresecure/suresecure-deep-server-client-demo"} GitHub
     %hr
 
