--- a/source/support.html.haml
+++ b/source/support.html.haml
@@ -9,7 +9,7 @@ title: 戍融智能
   %ul
     %li.qaitem
       .faq-question
-        管理程序安装与使用说明书
+        管理程序安装与使用
       .faq-answer
         安装程序
         %a{:href=>"#"} 下载
@@ -24,15 +24,17 @@ title: 戍融智能
     %hr
     %li.qaitem
       .faq-question
-        嵌入式3D行为分析智能设备使用说明书
+        嵌入式3D行为分析智能设备
       .faq-answer
+        使用说明书
         %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-embedded-3d-analysis-device-user-guide/suresecure-embedded-3d-analysis-device-user-guide.md.html"} HTML
         %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-embedded-3d-analysis-device-user-guide/suresecure-embedded-3d-analysis-device-user-guide.md.pdf"} PDF
     %hr
     %li.qaitem
       .faq-question
-        ATM防护智能分析设备使用说明书
+        ATM防护智能分析设备
       .faq-answer
+        使用说明书
         %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-atm-protection-device-user-guide/suresecure-atm-protection-device-user-guide.md.html"} HTML
         %a{:href=>"http://docs.suresecure.com.cn/pub/suresecure-atm-protection-device-user-guide/suresecure-atm-protection-device-user-guide.md.pdf"} PDF
     %hr
