--- a/source/support.html.haml
+++ b/source/support.html.haml
@@ -46,10 +46,7 @@ title: 戍融智能
         %a{:href=>"http://docs.suresecure.com.cn/pub/srzn_ivs_sdk/srzn_ivs_sdk.md.html"} HTML
         %a{:href=>"http://docs.suresecure.com.cn/pub/srzn_ivs_sdk/srzn_ivs_sdk.md.pdf"} PDF
         %br
-        该说明文档对应示例源码
-        %a{:href=>"https://github.com/suresecure/suresecure-ivs-sdk-demo"} GitHub
-        %br
-        另外我们提供一个较为完整的模拟报警发送与接收的示例程序及相应的源码
+        我们提供一个较为完整的CSharp模拟报警发送与接收的示例程序及相应的源码
         %a{:href=>"http://downloads.suresecure.com.cn/suresecure-event-demo.zip"} ZIP
         %a{:href=>"https://github.com/suresecure/suresecure-ivs-event-demo"} GitHub
         %br
